--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
         android:layout_alignParentLeft="false"
         android:layout_alignParentRight="true"
         android:textSize="24dp"
-        android:onClick="rollback" />
+        android:onClick="Backing" />
 
     <Button
         android:layout_width="wrap_content"
@@ -59,6 +59,7 @@
         android:text="Next"
         android:id="@+id/button"
         android:textSize="24dp"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="true"
+        android:onClick="Forwarding" />
 
 </RelativeLayout>
